# sqlmagick

./: .gitignore  README.md  pyproject.toml
scripts/: disable_registry.bat  open_with_jupyter.py  setup_registry.bat
src/: sqlmagick.py
src/sqlmagick/: __init__.py  sqlmagick.py
test/: magick.ipynb
